修复零星bug